# pre-commit.com

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .scss-lint.yml  .travis.yml  CNAME  LICENSE  Makefile  README.md  all-hooks.json  all-repos.yaml  azure-pipelines.yml  base.mako  biome.json  bower.json  draft_content.md  draft_content.rst  hooks.html  hooks.mako  index.html  index.mako  install-local.py  install.sh  make_all_hooks.py  make_bootstrap.py  make_templates.py  package-lock.json  package.json  push_to_gh.sh  pyproject.toml  requirements-dev.txt  requirements_dev.txt  root_install.sh  setup.cfg  template_lib.py
.github/: pull_request_template.md
.github/workflows/: deploy.yml
assets/: copyable.js  filter_repos.js
bower_components/bootstrap-sass/: .bower.json
bower_components/jquery/: .bower.json
bower_components/sass-bootstrap/: .bower.json
scss/: _variables.scss  main.scss  main_bs4.scss  main_bs5.scss
sections/: advanced.md  cli.md  contributing.md  hooks.md  install.md  intro.md  new-hooks.md  plugins.md  usage.md
